
option java_outer_classname="UnRegisterCQCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message UnRegisterCQCommand {
	optional string serverUniqueId = 1;
	optional string clientUniqueId = 2;
	optional int64 requestId = 3;
}